# aicookbook

./: .gitignore
src/advanced/: readme.html
src/advanced/asyncio/: README_ENV.md  analyze_delisted_csv.py  analyze_normal_csv.py  async_http.py  async_iterator.py  async_queue.py  await.py  basic.py  config.py  context_resource.py  eodhd_bluksymbol_price.py  eodhd_delisted_symbol.py  eodhd_symbol.py  mutli_tasks.py  readme.md  test_env_config.py
src/docling_rag/: docling_client.py
src/embedding/: self_embedding.py
src/mcp/mcp_test/: pyproject.toml
src/mcp/mcp_test/src/mcp_client/: client.py
src/mcp/mcp_test/src/mcp_service/: server.py
src/mineru_pdf/: extractous_client.py  mineru_sgclient.py
src/openai_agents/report_demo/: pyproject.toml
src/openai_agents/report_demo/src/planner_report/: __init__.py  context.py  planner_agent.py  run_demo.py  tools.py  writer_agent.py
src/openai_agents/report_demo/tests/: eval_samples.jsonl  test_evals.py
