[project]
name = "mcp-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "simen", email = "code@arencore.me" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.34.2",
    "websockets>=15.0.1",
]

[project.scripts]
mcp-test = "mcp_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
